# cursor-cli-proxy

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  models.json  pyproject.toml  pyvenv.cfg  requirements.txt
.cursor/skills/compare-cursor-agent-versions/: SKILL.md  examples.md
.cursor/skills/compare-cursor-agent-versions/scripts/: compare_help.py
src/: command_builder.py  config.py  executor.py  main.py  model_registry.py  models.py  relay.py  session_manager.py  slash_command_loader.py  tag_parser.py  temp_file_handler.py  tool_formatters.py
tests/: conftest.py  test_api_basic.py  test_clear_sessions.py  test_config.py  test_executor.py  test_file_upload.py  test_history_inclusion.py  test_model_id_prefix.py  test_model_persistence.py  test_model_registry.py  test_models.py  test_models_endpoint.py  test_models_endpoint_dynamic.py  test_relay_builder.py  test_relay_session.py  test_relay_stream.py  test_relay_stream_tool_calls.py  test_session_id_tag.py  test_session_manager.py  test_slash_commands.py  test_think_block.py  test_workspace_tag.py
